✨ feat(backend): 프로젝트 CRUD API 구현
